# robp_phidgets

./: CMakeLists.txt  package.xml
cfg/: Encoder.cfg  Motor.cfg  Spatial.cfg
include/robp_phidgets/: encoder.h  encoders.h  encoders_nodelet.h  motors.h
launch/: motors.launch
src/: encoder.cpp  encoders.cpp  motor.cpp  motors.cpp
